# PatchHawk

./: .env.example  .gitignore  Dockerfile  README.md  check.py  config.yaml  inference.py  nginx.conf  openenv.yaml  pyproject.toml  requirements.txt  setup.py  start.sh
docker/: Dockerfile.sandbox
docs/: implementation
grpo_lora/: config.json
patchhawk/: __init__.py  env_models.py  tasks.py
patchhawk/agent/: __init__.py  environment.py  sandbox.py  server.py
patchhawk/app/: __init__.py  dashboard.py
patchhawk/data/: __init__.py  generate_scenarios.py  scenarios.json  sdk_config.yaml
patchhawk/data/benign/: ds_binarysearch.py  ds_linkedlist.py  ds_queue.py  ds_sorting.py  ds_stack.py  io_config.py  io_csv.py  io_json.py  io_log.py  io_template.py  math_factorial.py  math_fibonacci.py  math_gcd.py  math_matrix.py  math_prime.py  misc_calc.py  misc_date.py  misc_password.py  misc_temp.py  misc_url.py  str_anagram.py  str_caesar.py  str_palindrome.py  str_slug.py  str_wordcount.py
patchhawk/training/: __init__.py  train_grpo.py
sentinel_synth/: config.py
sentinel_synth/dashboard/: app.py
sentinel_synth/data/: generate_scenarios.py  scenarios.json
sentinel_synth/data/benign/: ds_binarysearch.py  ds_linkedlist.py  ds_sorting.py  io_config.py  io_csv.py  io_json.py  io_log.py  (+9 more)
sentinel_synth/envs/: sentinel_env.py
sentinel_synth/tests/: test_validator.py
sentinel_synth/training/: train_grpo.py
sentinel_synth/validation/: docker_runner.py  patch_validator.py
server/: __init__.py  app.py
tests/: __init__.py  test_env.py  test_sandbox.py
